tests/sksl/errors/ErrorsInDeadCode.glsl
### Compilation failed:

error: 3: unknown identifier 'x'
error: 4: unknown identifier 'x'
error: 5: unknown identifier 'x'
error: 6: unknown identifier 'x'
4 errors
